--- a/templates/registration.html
+++ b/templates/registration.html
@@ -9,6 +9,12 @@
     {{ form.as_p | safe }}
 
     <input type="submit" name="submit">
+    <a href="/login/">Вход</a>
+    {% if user.is_authenticated %}
+        <a href="/cabinet/">Личный кабинет</a>
+    {% endif %}
+
+    {{ user }}
 </form>
 
 </body>
