--- a/templates/restore_password.html
+++ b/templates/restore_password.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 
+
 <form  method="post">{% csrf_token %}
 
     {{ form.as_p | safe }}
-    <input name="submit" type="submit">
-    <a href="/request/restore/password">Забыли пароль?</a>
+    <input type="submit" name="submit">
 
 </form>
 
