--- a/templates/request_restore_password.html
+++ b/templates/request_restore_password.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "index.html" %}
 
+{% block content %}
+    <form  method="post">{% csrf_token %}
 
-<form  method="post">{% csrf_token %}
+        <input type="text" name="restore_email">
+        <input type="submit" name="restore">
 
-    <input type="text" name="restore_email">
-    <input type="submit" name="restore">
-
-</form>
-</body>
-</html>
+    </form>
+{% endblock content %}
