--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "index.html" %}
 
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<head>#}
+{#    <title></title>#}
+{#</head>#}
+{#<body>#}
+{% block content %}
 <form  method="post">{% csrf_token %}
 
     {{ form.as_p | safe }}
@@ -12,6 +14,6 @@
     <a href="/request/restore/password">Забыли пароль?</a>
 
 </form>
-
-</body>
-</html>
+{% endblock content %}
+{#</body>#}
+{#</html>#}
