--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "index.html" %}
 
-<form  method="post">{% csrf_token %}
-    {{ form.as_p | safe }}
+{% if user.is_anonymous %}
+    {% block content %}
 
-    <input type="submit" name="submit">
-    <a href="/login/">Вход</a>
-    {% if user.is_authenticated %}
-        <a href="/cabinet/">Личный кабинет</a>
-    {% endif %}
+        <form method="post">{% csrf_token %}
+            {{ form.as_p | safe }}
 
-    {{ user }}
-</form>
+            <input type="submit" name="submit">
+            <a href="/login/">Вход</a>
+            {% if user.is_authenticated %}
+                <a href="/cabinet/">Личный кабинет</a>
+            {% endif %}
 
-</body>
-</html>
+            {{ user }}
+        </form>
+
+    {% endblock content %}
+
+{% endif %}
