--- a/templates/restore_password.html
+++ b/templates/restore_password.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "index.html" %}
 
+{% block content %}
+    <form  method="post">{% csrf_token %}
 
-<form  method="post">{% csrf_token %}
+        {{ form.as_p | safe }}
+        <input type="submit" name="submit">
 
-    {{ form.as_p | safe }}
-    <input type="submit" name="submit">
+    </form>
 
-</form>
-
-</body>
-</html>
+{% endblock content %}
