--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -7,7 +7,10 @@
 
     {% if user.is_authenticated %}
     cabinet
-
+        <form method="post">{% csrf_token %}
+            {{ form.as_p | safe }}
+            <input type="submit" name="send" value="send">
+        </form>
     <a href="/logout/">Выход</a>
 
     {% endif %}
