--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/grid.css" type="text/css" media="screen">
+
+        header {width:100%;padding-bottom:44px;margin-bottom:-30px}
+	#page1 header {min-height:600px;background:url(../images/header-bg.jpg) center top no-repeat}
     {% endblock css %}
     {% block js %}
         <script src="{{ STATIC_URL }}js/jquery-1.6.2.min.js" type="text/javascript"></script>
@@ -39,14 +42,18 @@
 								<nav class="wrapper">
 									<ul class="menu">
 										<li><a class="active" href="index.html">About us</a></li>
-										<li><a href="services.html">Services</a></li>
-										<li><a href="therapies.html">Therapies</a></li>
-										<li><a href="staff.html">Our Staff</a></li>
+                                    {% for menu in menus %}
+										<li><a href="/menu{{ menu.url }}">{{ menu.title }}</a></li>
+{#                                        <li><a href="{{ menu.url }}">{{ menu.title }}</a></li>#}
+{#										<li><a href="{{ menu.url }}">{{ menu.title }}</a></li>#}
+                                    {% endfor %}
                                         <li class="last-item">
                                             {% if user.is_anonymous %}
                                                 <a class="multi-href" href="/request/restore/password/">Password?</a>
                                                 <a class="multi-href" href="/registration/">Registration</a>
-                                                <input class="multi-href" type="submit" name="Login" value="Login">
+                                                <form method="post">{% csrf_token %}
+                                                    <input class="multi-href" type="submit" name="Login" value="Login">
+                                                </form>
                                             {% else %}
                                                 <a href="/logout/">Exit</a>
                                             {% endif %}
@@ -58,7 +65,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="ic">More <a href="http://www.templatemonster.com/">Website Templates</a> @ TemplateMonster.com - August29th 2011!</div>
+{#					<div class="ic">More <a href="http://www.templatemonster.com/">Website Templates</a> @ TemplateMonster.com - August29th 2011!</div>#}
 				</div>
 			</div>
 		</header>
@@ -130,36 +137,7 @@
 			</div>
 		</section>
 	</div>
-	
-<!-- aside -->
-	<aside>
-		<div class="main">
-			<div class="container_12">
-				<div class="wrapper">
-					<article class="grid_4">
-						<h3 class="p1">Skin Care</h3>
-						<p class="indent-bot"><strong>Spa Salon</strong> is one of <a class="link" target="_blank" href="http://blog.templatemonster.com/free-website-templates/">free website templates</a> created by TemplateMonster.com team, opti mized for 1024X768 screen resolution. It is <br>also XHTML &amp; CSS valid.</p>
-						<a class="button" href="#">Read More</a>
-					</article>
-					<article class="grid_4">
-						<div class="indent-left3">
-							<h3 class="p1">Massage</h3>
-							<p class="indent-bot">This <a class="link" target="_blank" href="http://blog.templatemonster.com/2011/08/29/free-website-template-clean-style-spa-salon/ ">Spa Salon Template</a> goes with two pack ages – with PSD source files (are available for free for the registered members of Templates.com) and without them.</p>
-							<a class="button" href="#">Read More</a>
-						</div>
-					</article>
-					<article class="grid_4">
-						<div class="indent-left2">
-							<h3 class="p1">Spa Rest</h3>
-							<p class="indent-bot">This website template has several pages: <a class="link" href="index.html">About Us</a>, <a class="link" href="services.html">Our Services</a>, <a class="link" href="therapies.html">Therapies</a>, <a class="link" href="staff.html">Our Staff</a>, <a class="link" href="contacts.html">Contact Us</a> (please note that contact us form doesn’t work).</p>
-							<a class="button" href="#">Read More</a>
-						</div>
-					</article>
-				</div>
-			</div>
-		</div>
-	</aside>
-	
+
 <!-- footer -->
 	<footer>
 		<div class="main">
@@ -178,8 +156,11 @@
 					</div>
 					<div class="grid_4">
 						<div class="support-phone">
-							<strong>Toll Free:</strong>
-							<b>8(800)</b>154-45-67
+
+                            <strong>Phone</strong>
+                            <b>{{ contacts.phone }}</b>
+{#							<strong>Toll Free:</strong>#}
+{#							<b>8(800)</b>154-45-67#}
 						</div>
 					</div>
 				</div>
