--- a/templates/registration.html
+++ b/templates/registration.html
@@ -7,12 +7,12 @@
             {{ form.as_p | safe }}
 
             <input type="submit" name="submit">
-            <a href="/login/">Вход</a>
-            {% if user.is_authenticated %}
-                <a href="/cabinet/">Личный кабинет</a>
-            {% endif %}
+{#            <a href="/login/">Отправить</a>#}
+{#            {% if user.is_authenticated %}#}
+{#                <a href="/cabinet/">Личный кабинет</a>#}
+{#            {% endif %}#}
 
-            {{ user }}
+{#            {{ user }}#}
         </form>
 
     {% endblock content %}
