--- a/collect_static/css/style.css
+++ b/collect_static/css/style.css
@@ -82,7 +82,8 @@ header {width:100%;padding-bottom:44px;margin-bottom:-30px}
 
 }
 
-.menu li a {display:block;width:188px;font-size:28px;line-height:2em;font-weight:400;padding:31px 0 26px 0;margin:0 0 4px 0;color:#151515;background:url(../images/menu-active-tail.png) left -120px repeat-x;text-align:center;letter-spacing:-1px;border-radius:0 0 8px 8px;-moz-border-radius:0 0 8px 8px;-webkit-border-radius:0 0 8px 8px}
+.menu li a.make_button {display:block;width:188px;font-size:28px;line-height:2em;font-weight:400;padding:31px 0 26px 0;margin:0 0 4px 0;color:#151515;background:url(../images/menu-active-tail.png) left -120px repeat-x;text-align:center;letter-spacing:-1px;border-radius:0 0 8px 8px;-moz-border-radius:0 0 8px 8px;-webkit-border-radius:0 0 8px 8px}
+.menu li a.active {display:block;width:188px;font-size:28px;line-height:2em;font-weight:400;padding:31px 0 26px 0;margin:0 0 4px 0;color:#151515;background:url(../images/menu-active-tail.png) left -120px repeat-x;text-align:center;letter-spacing:-1px;border-radius:0 0 8px 8px;-moz-border-radius:0 0 8px 8px;-webkit-border-radius:0 0 8px 8px}
 .menu li a.active, .menu li a:hover {color:#fff;background-position:left top;background-color: #171717;box-shadow: 0px 0px 4px rgba(0,0,0,0.20);-moz-box-shadow: 0px 0px 4px rgba(0,0,0,0.8);-webkit-box-shadow: 0px 0px 4px rgba(0,0,0,9)}
 .menu li.active, .menu li:hover {}
 h1 {padding:31px 0 0 2px;position:relative}
