--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,13 @@
         <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/grid.css" type="text/css" media="screen">
-
+{#        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" type="text/css" media="screen">#}
+{#        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" type="text/css" media="screen">#}
+{#        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" type="text/css" media="screen">#}
         header {width:100%;padding-bottom:44px;margin-bottom:-30px}
 	#page1 header {min-height:600px;background:url(../images/header-bg.jpg) center top no-repeat}
+{#                <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" media="screen">#}
+
     {% endblock css %}
     {% block js %}
         <script src="{{ STATIC_URL }}js/jquery-1.6.2.min.js" type="text/javascript"></script>
@@ -18,6 +22,8 @@
         <script src="{{ STATIC_URL }}js/Vegur_300.font.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/Vegur_400.font.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/FF-cash.js" type="text/javascript"></script>
+{#        <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>#}
+{#        <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>#}
     {% endblock js %}
 	<!--[if lt IE 7]>
 		<div style=' clear: both; text-align:center; position: relative;'>
@@ -43,7 +49,7 @@
 									<ul class="menu">
 										<li><a class="active" href="index.html">About us</a></li>
                                     {% for menu in menus %}
-										<li><a href="/menu{{ menu.url }}">{{ menu.title }}</a></li>
+										<li><a class="make_button" href="/menu{{ menu.url }}">{{ menu.title }}</a></li>
 {#                                        <li><a href="{{ menu.url }}">{{ menu.title }}</a></li>#}
 {#										<li><a href="{{ menu.url }}">{{ menu.title }}</a></li>#}
                                     {% endfor %}
@@ -52,10 +58,11 @@
                                                 <a class="multi-href" href="/request/restore/password/">Password?</a>
                                                 <a class="multi-href" href="/registration/">Registration</a>
                                                 <form method="post">{% csrf_token %}
-                                                    <input class="multi-href" type="submit" name="Login" value="Login">
+{#                                                    <input class="multi-href" type="submit" name="Login" value="Login">#}
+                                                <a href="/login/" class="btn btn-large btn-primary">Login</a>
                                                 </form>
                                             {% else %}
-                                                <a href="/logout/">Exit</a>
+                                                <a href="/logout/" class="make_button">Exit</a>
                                             {% endif %}
 
                                         </li>
