--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,13 @@
         <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/grid.css" type="text/css" media="screen">
+{#        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" media="screen">#}
 {#        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" type="text/css" media="screen">#}
 {#        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" type="text/css" media="screen">#}
 {#        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" type="text/css" media="screen">#}
         header {width:100%;padding-bottom:44px;margin-bottom:-30px}
-	#page1 header {min-height:600px;background:url(../images/header-bg.jpg) center top no-repeat}
-{#                <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" media="screen">#}
+
+{#	#page1 header {min-height:600px;background:url(../images/header-bg.jpg) center top no-repeat}#}
 
     {% endblock css %}
     {% block js %}
@@ -77,6 +78,22 @@
 			</div>
 		</header>
     {% endblock header %}
+
+{#    <div id="myCarousel" class="carousel slide">#}
+{#      <ol class="carousel-indicators">#}
+{#        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>#}
+{#        <li data-target="#myCarousel" data-slide-to="1"></li>#}
+{#        <li data-target="#myCarousel" data-slide-to="2"></li>#}
+{#      </ol>#}
+{#      <!-- Carousel items -->#}
+{#      <div class="carousel-inner">#}
+{#        <div class="active item"><img src="{{ STATIC_URL }}images/01.jpg" alt=""></div>#}
+{#        <div class="item"><img src="{{ STATIC_URL }}images/03.jpg" alt=""></div>#}
+{#      </div>#}
+{#      <!-- Carousel nav -->#}
+{#      <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>#}
+{#      <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>#}
+{#    </div>#}
 <!-- content -->
 		<section id="content">
 			<div class="main">
