--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@
                                             {% if user.is_anonymous %}
                                                 <a class="multi-href" href="/request/restore/password/">Password?</a>
                                                 <a class="multi-href" href="/registration/">Registration</a>
+                                                <a class="multi-href" href="/login/">Login</a>
 {#                                                <form method="post">{% csrf_token %}#}
 {#                                                    <input class="multi-href" type="submit" name="Login" value="Login">#}
 {#                                                <a href="/login/" class="multi-href">Login</a>#}
