raise erros in form

--- a/templates/grafiki.html
+++ b/templates/grafiki.html
@@ -51,7 +51,7 @@
 
 
 
-<script src="http://code.highcharts.com/highcharts.js"></script>
+{#<script src="http://code.highcharts.com/highcharts.js"></script>#}
 <div id="container" style="height: 600px"></div>
 {% endblock content %}
 </body>
