--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,8 @@
 <form  method="post">{% csrf_token %}
 
     {{ form.as_p | safe }}
+{#    {{ form.errors }}#}
+    {{ errors }}<br>
     <input name="submit" type="submit">
     <a href="/request/restore/password">Забыли пароль?</a>
 
