--- a/templates/multibox.html
+++ b/templates/multibox.html
@@ -6,6 +6,7 @@
     {% if is_feedback %}
         <form method="post">{% csrf_token %}
         {{ form.as_p | safe }}
+        {{ errors }}
         <input type="submit" name="submit" value="submit">
 
         </form>
