--- a/templates/request_restore_password.html
+++ b/templates/request_restore_password.html
@@ -3,7 +3,8 @@
 {% block content %}
     <form  method="post">{% csrf_token %}
 
-        <input type="text" name="restore_email">
+        <input type="text" name="restore_email"><br>
+        {{ errors }}<br>
         <input type="submit" name="restore">
 
     </form>
