--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -8,7 +8,14 @@
     {% if user.is_authenticated %}
     cabinet
         <form method="post">{% csrf_token %}
-            {{ form.as_p | safe }}
+            {% for field in form %}
+                <br>
+                {{ field.errors }}
+                {% if errors %}{{ errors }}<br>{% endif %}
+                {{ field.label_tag }}<br>
+                {{ field }}<br>
+            {% endfor %}
+{#            {{ form.as_p | safe }}#}
             <input type="submit" name="send" value="send">
         </form>
     <a href="/logout/">Выход</a>
