--- a/templates/multibox.html
+++ b/templates/multibox.html
@@ -5,8 +5,14 @@
     {{ content_text.text_bottom }}
     {% if is_feedback %}
         <form method="post">{% csrf_token %}
-        {{ form.as_p | safe }}
-        {{ errors }}
+            {% for field in form %}
+                <br>
+                {{ field.errors }}
+                {{ field.label_tag }}<br>
+                {{ field }}<br>
+            {% endfor %}
+{#        {{ form.as_p | safe }}#}
+{#        {{ errors }}#}
         <input type="submit" name="submit" value="submit">
 
         </form>
