show errors red

--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -10,9 +10,9 @@
         <form method="post">{% csrf_token %}
             {% for field in form %}
                 <br>
-                {{ field.errors }}
-                {% if errors %}{{ errors }}<br>{% endif %}
+{#                {% if errors %}{{ errors }}<br>{% endif %}#}
                 {{ field.label_tag }}<br>
+                {{ field.errors }}
                 {{ field }}<br>
             {% endfor %}
 {#            {{ form.as_p | safe }}#}
