--- a/templates/request_restore_password.html
+++ b/templates/request_restore_password.html
@@ -4,7 +4,7 @@
     <form  method="post">{% csrf_token %}
 
         <input type="text" name="restore_email"><br>
-        {{ errors }}<br>
+        <p style="color: red"> {{ errors }}</p>
         <input type="submit" name="restore">
 
     </form>
