--- a/templates/login.html
+++ b/templates/login.html
@@ -15,8 +15,8 @@
 
     {% for field in form %}
         <br>
-        {{ field.errors }}<br>
         {{ field.label_tag }}<br>
+        {{ field.errors }}
         {{ field }}<br>
 {#    {{ form.as_p | safe }}#}
 {#    {{ form.errors }}#}
